--- a/src/index.css
+++ b/src/index.css
@@ -5,15 +5,12 @@
     align-items: center;
     justify-content: center;
     position: relative;
-    padding: 0 10px;
-    overflow: hidden; 
 }
 
 #top-bar img {
     height: 100%;
     position: absolute;
     left: 0;
-    object-fit: cover; /* Ensures the image scales nicely */
     opacity: 0.8; 
 }
 
@@ -33,26 +30,19 @@
 }
 
 #selection button {
-    background-color: #073e6b; /* Bright green (matches the show's aesthetic) */
+    background-color: #073e6b; 
     color: black;
     font-size: 1.2rem;
     font-weight: bold;
     padding: 12px 20px;
-    border: none;
-    border-radius: 8px;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
     box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.2);
 }
 
 #selection button:hover {
-    background-color: #08f014; /* Darker green on hover */
-    transform: scale(1.1); /* Slight zoom effect */
-}
-
-#selection button:active {
-    transform: scale(1); /* Reset scale on click */
-    background-color: #2ef706;
+    background-color: #08f014; 
+    transform: scale(1.1); 
 }
 
 .display-characters {
@@ -82,27 +72,12 @@
 
 .card img {
     width: 100%;
-    height: auto;
 }
-
-.card-content {
-    padding: 15px;
-}
-
 .name {
     font-size: 1.5em;
     margin: 10px 0;
 }
-
-.status {
-    font-size: 1em;
-    color: #555;
-}
-.gender {
-    font-size: 1em;
-    color: #555;
-}
-.species {
+.status, .gender, .species  {
     font-size: 1em;
     color: #555;
 }
@@ -117,11 +92,6 @@
     background: #05207a;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
-.character-info {
-    flex: 1;
-    padding: 20px;
 }
 
 .character-info h2 {
@@ -140,4 +110,55 @@
     border-radius: 10px;
 }
 
+.all-characters-cards {
+    background-color: #c5afaf;
+    border-radius: 10px;
+    padding: 10px;
+    width: 250px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    margin-bottom: 10px;
+    display: flex; 
+    align-items: center;
+    justify-content: flex-start; 
+    gap: 25px; 
+}
 
+.all-characters-imgs {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+
+.all-characters-names {
+    font-size: 16px;
+    font-weight: bold;
+    margin: 0;
+}
+
+.all-characters-species,
+.all-characters-locations,
+.all-characters-status {
+    font-size: 14px;
+    color: #0f0f0f;
+    margin: 2px 0;
+}
+
+.more {
+    display: block;
+    margin: 20px auto;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    color: rgb(7, 7, 7);
+    background-color: #340ce7;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background 0.3s ease, transform 0.2s ease;
+}
+
+.more:hover {
+    background-color: #03fd0f;
+    transform: scale(1.05);
+}
