--- a/src/index.css
+++ b/src/index.css
@@ -65,8 +65,8 @@
 }
 
 .card:hover {
-    transform: scale(1.3); /* Slight zoom effect */
-    box-shadow: 5px 8px 20px rgba(35, 1, 184, 0.2); /* Add a soft shadow */
+    transform: scale(1.3); 
+    box-shadow: 5px 8px 20px rgba(35, 1, 184, 0.2); 
     cursor: pointer;
 }
 
@@ -89,7 +89,7 @@
     max-width: 800px;
     margin: 20px auto;
     padding: 20px;
-    background: #05207a;
+    background: #525761;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
@@ -123,6 +123,12 @@
     gap: 25px; 
 }
 
+.all-characters-cards:hover {
+    transform: scale(1.05); 
+    box-shadow: 5px 8px 20px rgba(35, 1, 184, 0.2); 
+    cursor: pointer;
+}
+
 .all-characters-imgs {
     width: 80px;
     height: 80px;
@@ -144,7 +150,7 @@
     margin: 2px 0;
 }
 
-.more-characters, .more-locations {
+.more {
     display: block;
     margin: 20px auto;
     padding: 10px 20px;
@@ -158,7 +164,20 @@
     transition: background 0.3s ease, transform 0.2s ease;
 }
 
-.more-characters, .more-locations:hover {
+.more:hover {
     background-color: #03fd0f;
     transform: scale(1.05);
+}
+
+.like-glyph {
+    cursor: pointer;
+    background: #525761;
+}
+.dislike-glyph {
+    cursor: pointer;
+    background: #525761;
+}
+
+.activated-heart {
+    color: red;
 }
